mroe overflow mobile fixes + social media changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -283,18 +283,22 @@ font-family: 'Aleo';
 .socMedia {
     position: fixed;
     bottom: 100px;
-    right:100px;
+    right:120px;
     list-style-type: none;
     line-height: 2em;
     font-size: 1.5em;}
 
 .socMedia2 {
     position: fixed;
-    top: 90px;
-    left:100px;
+    top: 80px;
+    left:120px;
     list-style-type: none;
     line-height: 2em;
-    font-size: 1.5em;}
+    font-size: 1.5em;
+    display:inline-block;
+    }
+
+.socMedia2 li {float:left; padding-right:20px;}
 
 li{transition: color .5s;}
 
@@ -459,7 +463,7 @@ li:hover a {color:#D0021B;}
         
     }
     
-.mainNav{visibility: hidden;}
+.mainNav{visibility: hidden; width: 93vw;}
     
     
    #scrollingWrapper{
@@ -468,6 +472,7 @@ li:hover a {color:#D0021B;}
     width:70vw;
     height:2200px;
     margin-top:320px;
+       overflow-x: hidden;
 }
 #scrollInteraction{width:0px; height:0px;}
 #scrollStrategy{width:0px; height:0px;}
